[package]
name = "openbook-v2"
edition = "2021"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "openbook_v2"

[features]
default = ["no-entrypoint", "client"]
no-entrypoint = []
client = ["no-entrypoint"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["event-cpi"] }
anchor-spl = { version =  "0.29.0" }
arrayref = "0.3.6"
bytemuck = { version = "1.21.0", features = ["derive", "min_const_generics"] }
default-env = "0.1.1"
derivative = "2.2.0"
fixed = { git = "https://github.com/blockworks-foundation/fixed.git", branch = "v1.11.0-borsh0_10-mango", features = ["serde", "borsh", "debug-assert-in-release"] }
itertools = "0.10.3"
num_enum = "0.5.1"
pyth-sdk-solana = { version = "0.10.1" }
solana-security-txt = "1.1.1"
solana-program = { version =  "1.18.16"}
solana-sdk = { version = "1.18.16" }
switchboard-program = ">=0.2.0"
switchboard-solana = "0.29.99"
